# EKA

./: README.md  pyproject.toml
app/: main.py
app/adapters/bm25/: bm25.py
app/adapters/llm/: base.py  ollama.py  openai.py
app/adapters/vector/: base.py  qdrant.py
app/api/: routes_chat.py  routes_documents.py  routes_ingest.py  routes_search.py
app/core/: config.py  logging.py  models.py
app/legal/: legal_chunker.py  legal_metadata.py  legal_prompts.py  legal_validity.py
app/services/: chunk_service.py  citation_service.py  embed_service.py  ingest_service.py  llm_factory.py  pipeline_service.py  rag_service.py  rerank_service.py  retrieve_service.py  store_service.py  title_service.py
data/: eka.sqlite3
data/test_samples/: company_handbook.md  it_incident_runbook.md  legal_service_agreement.md
docker/: Dockerfile  UI.Dockerfile  WEB.Dockerfile  docker-compose.yml
scripts/: e2e_reset.ps1  e2e_reset.sh
ui/: streamlit_app.py
web/: package.json
web/app/: layout.tsx  page.tsx
web/app/api/chat/: route.ts
web/app/api/chat/stream/: route.ts
web/app/api/documents/: route.ts
web/app/api/documents/[docId]/: route.ts
web/app/api/health/: route.ts
web/app/api/ingest/path/: route.ts
web/app/api/ingest/upload/: route.ts
web/app/api/ingest/url/: route.ts
web/app/documents/: page.tsx
web/components/: ChatClient.tsx  DocumentsClient.tsx  Message.tsx  Sidebar.tsx
web/lib/: backend.ts  sse.ts  types.ts
